fix: refactor date calculations for better readability in charts and forms

--- a/app/(protected)/pagina-inicial/pagina-inicial.scss
+++ b/app/(protected)/pagina-inicial/pagina-inicial.scss
@@ -70,6 +70,15 @@
   }
 }
 
+@media screen and (max-width: 1440px) {
+  .layout-page {
+    .layout-resumo {
+      flex-direction: column;
+      width: 100%;
+    }
+  }
+}
+
 @media screen and (max-width: 490px) {
   .card-footer {
     div {
